Combine the data

--- a/content_based_filtering.ipynb
+++ b/content_based_filtering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +770,7 @@
        "['genres', 'keywords', 'tagline', 'cast', 'director']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1245,7 @@
        "[4803 rows x 24 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1253,6 +1253,39 @@
    "source": [
     "# cek lagi datanya udah keubah\n",
     "travels_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       Action Adventure Fantasy Science Fiction cultu...\n",
+       "1       Adventure Fantasy Action ocean drug abuse exot...\n",
+       "2       Action Adventure Crime spy based on novel secr...\n",
+       "3       Action Crime Drama Thriller dc comics crime fi...\n",
+       "4       Action Adventure Science Fiction based on nove...\n",
+       "                              ...                        \n",
+       "4798    Action Crime Thriller united states\\u2013mexic...\n",
+       "4799    Comedy Romance  A newlywed couple's honeymoon ...\n",
+       "4800    Comedy Drama Romance TV Movie date love at fir...\n",
+       "4801      A New Yorker in Shanghai Daniel Henney Eliza...\n",
+       "4802    Documentary obsession camcorder crush dream gi...\n",
+       "Length: 4803, dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# combining all 5 selected feature\n",
+    "combine_features = travels_data['genres'] + ' ' + travels_data['keywords'] + ' ' + travels_data['tagline'] + ' ' + travels_data['cast'] + ' ' + travels_data['director']\n",
+    "combine_features"
    ]
   },
   {
