--- a/content_based_filtering.ipynb
+++ b/content_based_filtering.ipynb
@@ -1290,10 +1290,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 2432)\t0.17272411194153\n",
+      "  (0, 7755)\t0.1128035714854756\n",
+      "  (0, 13024)\t0.1942362060108871\n",
+      "  (0, 10229)\t0.16058685400095302\n",
+      "  (0, 8756)\t0.22709015857011816\n",
+      "  (0, 14608)\t0.15150672398763912\n",
+      "  (0, 16668)\t0.19843263965100372\n",
+      "  (0, 14064)\t0.20596090415084142\n",
+      "  (0, 13319)\t0.2177470539412484\n",
+      "  (0, 17290)\t0.20197912553916567\n",
+      "  (0, 17007)\t0.23643326319898797\n",
+      "  (0, 13349)\t0.15021264094167086\n",
+      "  (0, 11503)\t0.27211310056983656\n",
+      "  (0, 11192)\t0.09049319826481456\n",
+      "  (0, 16998)\t0.1282126322850579\n",
+      "  (0, 15261)\t0.07095833561276566\n",
+      "  (0, 4945)\t0.24025852494110758\n",
+      "  (0, 14271)\t0.21392179219912877\n",
+      "  (0, 3225)\t0.24960162956997736\n",
+      "  (0, 16587)\t0.12549432354918996\n",
+      "  (0, 14378)\t0.33962752210959823\n",
+      "  (0, 5836)\t0.1646750903586285\n",
+      "  (0, 3065)\t0.22208377802661425\n",
+      "  (0, 3678)\t0.21392179219912877\n",
+      "  (0, 5437)\t0.1036413987316636\n",
+      "  :\t:\n",
+      "  (4801, 17266)\t0.2886098184932947\n",
+      "  (4801, 4835)\t0.24713765026963996\n",
+      "  (4801, 403)\t0.17727585190343226\n",
+      "  (4801, 6935)\t0.2886098184932947\n",
+      "  (4801, 11663)\t0.21557500762727902\n",
+      "  (4801, 1672)\t0.1564793427630879\n",
+      "  (4801, 10929)\t0.13504166990041588\n",
+      "  (4801, 7474)\t0.11307961713172225\n",
+      "  (4801, 3796)\t0.3342808988877418\n",
+      "  (4802, 6996)\t0.5700048226105303\n",
+      "  (4802, 5367)\t0.22969114490410403\n",
+      "  (4802, 3654)\t0.262512960498006\n",
+      "  (4802, 2425)\t0.24002350969074696\n",
+      "  (4802, 4608)\t0.24002350969074696\n",
+      "  (4802, 6417)\t0.21753405888348784\n",
+      "  (4802, 4371)\t0.1538239182675544\n",
+      "  (4802, 12989)\t0.1696476532191718\n",
+      "  (4802, 1316)\t0.1960747079005741\n",
+      "  (4802, 4528)\t0.19504460807622875\n",
+      "  (4802, 3436)\t0.21753405888348784\n",
+      "  (4802, 6155)\t0.18056463596934083\n",
+      "  (4802, 4980)\t0.16078053641367315\n",
+      "  (4802, 2129)\t0.3099656128577656\n",
+      "  (4802, 4518)\t0.16784466610624255\n",
+      "  (4802, 11161)\t0.17867407682173203\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert text data to feature vectors\n",
+    "# Karena cosine_similarity harus pake vectors \n",
+    "vectorizer = TfidfVectorizer()\n",
+    "\n",
+    "# Merubah ke feature vectors dimana data menjadi numerical values\n",
+    "feature_vectors = vectorizer.fit_transform(combine_features)\n",
+    "print(feature_vectors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.        , 0.07219487, 0.037733  , ..., 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.07219487, 1.        , 0.03281499, ..., 0.03575545, 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.037733  , 0.03281499, 1.        , ..., 0.        , 0.05389661,\n",
+       "        0.        ],\n",
+       "       ...,\n",
+       "       [0.        , 0.03575545, 0.        , ..., 1.        , 0.        ,\n",
+       "        0.02651502],\n",
+       "       [0.        , 0.        , 0.05389661, ..., 0.        , 1.        ,\n",
+       "        0.        ],\n",
+       "       [0.        , 0.        , 0.        , ..., 0.02651502, 0.        ,\n",
+       "        1.        ]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Menggunakan algoritma cosine similarity untuk recommended \n",
+    "# Code ini akan mendapatkan score dari cosine similarity function\n",
+    "\n",
+    "similarity = cosine_similarity(feature_vectors)\n",
+    "similarity"
+   ]
   }
  ],
  "metadata": {
