--- a/content_based_filtering.ipynb
+++ b/content_based_filtering.ipynb
@@ -4582,6 +4582,63 @@
     "sorted_similar_travel = sorted(similarity_score, key = lambda x:x[1], reverse = True)\n",
     "sorted_similar_travel"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hasil recomendded travel spot untuk anda: \n",
+      "1. Iron Man\n",
+      "2. Iron Man 2\n",
+      "3. Iron Man 3\n",
+      "4. Avengers: Age of Ultron\n",
+      "5. The Avengers\n",
+      "6. Captain America: Civil War\n",
+      "7. Captain America: The Winter Soldier\n",
+      "8. Ant-Man\n",
+      "9. X-Men\n",
+      "10. Made\n",
+      "11. X-Men: Apocalypse\n",
+      "12. X2\n",
+      "13. The Incredible Hulk\n",
+      "14. The Helix... Loaded\n",
+      "15. X-Men: First Class\n",
+      "16. X-Men: Days of Future Past\n",
+      "17. Captain America: The First Avenger\n",
+      "18. Kick-Ass 2\n",
+      "19. Guardians of the Galaxy\n",
+      "20. Deadpool\n",
+      "21. Thor: The Dark World\n",
+      "22. G-Force\n",
+      "23. X-Men: The Last Stand\n",
+      "24. Duets\n",
+      "25. Mortdecai\n",
+      "26. The Last Airbender\n",
+      "27. Southland Tales\n",
+      "28. Zathura: A Space Adventure\n",
+      "29. Sky Captain and the World of Tomorrow\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Show top 30 travel spots\n",
+    "print('Hasil recomendded travel spot untuk anda: ')\n",
+    "\n",
+    "i = 1\n",
+    "for travel in sorted_similar_travel:\n",
+    "    index = travel[0]\n",
+    "    title_from_index = travels_data[travels_data.index == index]['title'].values[0]\n",
+    "    if(i < 30):\n",
+    "        print(str(i) + \".\", title_from_index)\n",
+    "        i += 1\n",
+    "    else:\n",
+    "        break;"
+   ]
   }
  ],
  "metadata": {
