Selesai membuat Artificial Inteligence content based filtering untuk recommended system travel & sudah dijadikan satu code

--- a/content_based_filtering.ipynb
+++ b/content_based_filtering.ipynb
@@ -4639,6 +4639,73 @@
     "    else:\n",
     "        break;"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hasil recomendded travel spot untuk anda: \n",
+      "1. Brazil\n",
+      "2. Time Bandits\n",
+      "3. Charlie Bartlett\n",
+      "4. Monty Python and the Holy Grail\n",
+      "5. Renaissance\n",
+      "6. Good bye, Lenin!\n",
+      "7. Children of Men\n",
+      "8. From Hell\n",
+      "9. The Helix... Loaded\n",
+      "10. Mi America\n",
+      "11. The Intern\n",
+      "12. eXistenZ\n",
+      "13. The Big Wedding\n",
+      "14. Velvet Goldmine\n",
+      "15. State Fair\n",
+      "16. The Fifth Element\n",
+      "17. The Imaginarium of Doctor Parnassus\n",
+      "18. Weekend\n",
+      "19. The Watcher\n",
+      "20. Shark Tale\n",
+      "21. New Year's Eve\n",
+      "22. The Hitchhiker's Guide to the Galaxy\n",
+      "23. The Naked Gun 33⅓: The Final Insult\n",
+      "24. Inception\n",
+      "25. The Silence of the Lambs\n",
+      "26. The Boat That Rocked\n",
+      "27. The Brothers Grimm\n",
+      "28. The Queen\n",
+      "29. De-Lovely\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dijadikan satu code semua\n",
+    "travel_favorite = input(\"Enter your favorite travel spot: \")\n",
+    "list_of_all_travel_name = travels_data['title'].tolist()\n",
+    "find_close_match = difflib.get_close_matches(travel_favorite, list_of_all_travel_name)\n",
+    "close_match = find_close_match[0]\n",
+    "index_of_travel = travels_data[travels_data.title == close_match]['index'].values[0]\n",
+    "similarity_score = list(enumerate(similarity[index_of_travel]))\n",
+    "sorted_similar_travel = sorted(similarity_score, key = lambda x:x[1], reverse = True)\n",
+    "\n",
+    "\n",
+    "# Show top 30 travel spots\n",
+    "print('Hasil recomendded travel spot untuk anda: ')\n",
+    "\n",
+    "i = 1\n",
+    "for travel in sorted_similar_travel:\n",
+    "    index = travel[0]\n",
+    "    title_from_index = travels_data[travels_data.index == index]['title'].values[0]\n",
+    "    if(i < 30):\n",
+    "        print(str(i) + \".\", title_from_index)\n",
+    "        i += 1\n",
+    "    else:\n",
+    "        break;\n"
+   ]
   }
  ],
  "metadata": {
