--- a/Android App/app/src/main/res/values/strings.xml
+++ b/Android App/app/src/main/res/values/strings.xml
@@ -5,9 +5,9 @@
     <string name="now_playing">Now Playing</string>
     <string name="now_playing_desc">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
     <string name="pre_sale">Pre Sale</string>
-    <string name="pre_sale_desc">Tidak khawatir ketinggalan\nupdate film terbaru</string>
+    <string name="pre_sale_desc">Tidak khawatir ketinggalan\nupdate tiket terbaru</string>
     <string name="cashless">Cashless</string>
-    <string name="cashless_desc">Gunakan e-wallet untuk\ntransaksi tiket nonton</string>
+    <string name="cashless_desc">Gunakan e-wallet untuk\ntransaksi itinerary</string>
     <string name="sign_in">Sign In</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
