--- a/Android App/app/src/main/res/values/strings.xml
+++ b/Android App/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="email">Email Address</string>
     <string name="upload_nanti">Upload Nanti</string>
     <string name="photo">Photo</string>
-    <string name="selamat_datang">Selamat Datang,\nFajar M. Hamka</string>
+    <string name="selamat_datang">Welcome,\nFajar M. Hamka</string>
     <string name="simpan_dan_lanjutkan">Simpan dan Lanjutkan</string>
     <string name="coming_soon">Coming Soon</string>
     <string name="pilih_bangku">Pilih Bangku</string>
