Itinerary done and push result

--- a/Android App/app/src/main/res/values/strings.xml
+++ b/Android App/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="money">Money</string>
     <string name="theme">Theme</string>
     <string name="booking">Booking</string>
+    <string name="result">Result</string>
 </resources>
