Fix Bug UI on Home and result of itinerary

--- a/Android App/app/src/main/res/values/strings.xml
+++ b/Android App/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="theme">Theme</string>
     <string name="booking">Booking</string>
     <string name="result">Result</string>
+    <string name="now_trending">NOW TRENDING</string>
 </resources>
